EditCap and TShark cannot convert some file formats to libpcap while Wireshark can
This issue was migrated from bug 2868 in our old bug tracker.
Original bug information:
Reporter: Marcin Okraszewski
Status: RESOLVED FIXED
Product: Wireshark
Component: TShark
OS: Windows XP
Platform: x86
Version: 1.0.3
Attachments:
bug2868_1.patch: Patch to allow some files to be saved as pcap files.
aix61-ping.iptrace: Example of an iptrace which can be converted by Wireshark but not EditCap or TShark