Allow tshark to read a pcap file and either save it as a new pcap file or for packets to be read from the original pcap file, possibly filtered, then sent to stdout and piped to either tshark or wireshark, which can then read those filtered packets from stdin.  Patch submitted by me in bug 2868, although it doesn't actually fix that bug. #BACKPORT(1.10)

svn path=/trunk/; revision=49780